--- a/.github/workflows/java-cicd.yml
+++ b/.github/workflows/java-cicd.yml
@@ -5,7 +5,7 @@ on:
       - main
       - StannyB-CICD
   workflow_dispatch:
-  
+
 jobs:
   Stanny_Java_CICD_Task:
     runs-on: ubuntu-latest
@@ -19,24 +19,22 @@ jobs:
         distribution: 'zulu'
 
     - name: Show Java version
-      run: "java -version"
+      run: java -version
 
     - name: Checkout code
       uses: actions/checkout@v3
-      with:
-        ref: StannyB-CICD
 
     - name: Show directory
-      run: 'pwd'
+      run: pwd
 
     - name: List files
-      run: 'ls -al'
+      run: ls -al
 
     - name: Install Dependencies
-      run: 'mvn compile'
+      run: mvn compile
 
     - name: Build application
-      run: 'mvn package -DskipTests'
+      run: mvn package -DskipTests
 
     - name: Test application
-      run: 'mvn test'
+      run: mvn test
